# slurm-tools

./: README.md  dashboard.py  example_lazy_log.py  example_pretty_log.py  github.py  pyproject.toml  snapshot.py
slurm_tools/: slurm_logs.py  slurm_tui.py  snapshot.py  widgets.py
